# tp-3-mateuszkarolekipamega

./: CMakeLists.txt  projekcikTP3.pyd  test.py
include/: projekcikTP3.hpp
python_bindings/: bindings.cpp
src/: main.cpp  projekcikTP3.cpp
